# sign_language

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cross_validate.py  implementation_plan.md  instructions.md  pyproject.toml  requirements.txt  setup.py  sign_language.ipynb  sign_language_detection (1).ipynb  sign_language_detection.ipynb  sign_language_recognition.py
WLASL/: .gitignore  README.md  demo.ipynb  main.py
WLASL/configs/: base_config.py
WLASL/src/data/: data_loader.py
WLASL/src/preprocessing/: video_processor.py
WLASL/src/training/: cross_validate.py  trainer.py
processed/: preprocessing_results.json
processed/analysis/: analysis_results.json  class_distribution.csv  signer_distribution.csv
src/: __init__.py  config.py
src/data/: __init__.py  loader.py  preprocessing.py
src/models/: __init__.py  cnn_lstm.py  hybrid_transformers.py  i3d_base.py  i3d_transformer.py  video_transformer.py
src/training/: __init__.py  callbacks.py  class_mapping.json  cross_validate.py  evaluate.py  metrics.py  train.py  trainer.py
src/visualization/: __init__.py  inference.py  visualizer.py
tests/: run_tests.py  test_cnn_lstm.py  test_cross_validation.py  test_data_loader.py  test_data_preprocessing.py  test_i3d_transformer.py
tests/results/: test_report_20250215_202849.json
video/: dataset.json
wlasl_modified/: data_analysis.py  requirements_hybrid.txt  sign_language_detection.ipynb
wlasl_modified/.github/workflows/: python-package.yml
wlasl_modified/configs/: hybrid_transformer_config.py
wlasl_modified/examples/: README.md  README_HYBRID.md  hybrid_models_demo.ipynb  model_comparison.ipynb  requirements_comparison.txt  run_comparison.py  run_comparison.sh  train_efficient_model.py  train_enhanced_models.py  train_hybrid_models.py
wlasl_modified/examples/configs/: comparison_config.yml  efficient_training.yml  enhanced_models.yml  hybrid_example.yml
wlasl_modified/examples/utils/: comparison_utils.py  plot_results.py
wlasl_modified/src/: config.py
wlasl_modified/src/config/: model_config.py
wlasl_modified/src/data/: __init__.py  loader.py  preprocessing.py
wlasl_modified/tests/: test_hybrid_models.py  test_training.py  test_video_transformer.py
(+9 files in other folders)
